[package]
name = "zedmq"
version = "0.6.0"
authors = ["mental <mentalfoss@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A lightweight, safe, pure-Rust ØMQ/ZMTP library implementation."
repository = "https://github.com/mental32/zedmq"
readme = "README.md"
categories = ["network-programming"]
keywords = ["zmq", "protocol"]
documentation = "https://docs.rs/zedmq"

[dev-dependencies]
zmq = "0.9.2"
